syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme";
option java_outer_classname = "HelloWorldProto";

package org.acme;

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
    int32 count = 2;
}

service HelloService {
    rpc hello (HelloRequest) returns (HelloResponse) {}
}
